// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutMe - Basic tests AboutMe form matches its Full DOM snapshot 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-bottom: 1em;
  border-bottom: solid 1px #04d092;
}

.c1 div {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  padding: 0.1em;
  margin-top: 0.4em;
  margin-bottom: 0.4em;
  width: 100%;
}

.c1 div label {
  min-width: 25%;
  padding: 0.2em;
}

.c1 div input {
  margin-right: 5em;
  padding: 0.5em;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.c2 div {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-top: 0.4em;
  margin-bottom: 0.4em;
  width: 100%;
}

.c2 div input {
  width: 100%;
}

.c0 {
  border-bottom: none;
}

@media (min-width:800px) {
  .c1 div input {
    width: 100%;
  }
}

@media (min-width:800px) {
  .c2 div input {
    width: 100%;
  }
}

@media (min-width:800px) {
  .c2 div {
    width: 50%;
  }
}

<form
  action=""
  className="userDetailsForm"
  onSubmit={[Function]}
  style={
    Object {
      "display": "none",
    }
  }
>
  <Styled(styled.div)>
    <styled.div
      className="c0"
    >
      <div
        className="c0 c1"
      >
        <styled.div>
          <div
            className="c2"
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="firstName"
              >
                <strong>
                  First Name
                </strong>
                <input
                  id="firstName"
                  name="FirstName"
                  placeholder="e.g. John"
                  type="text"
                />
              </label>
            </div>
            <div
              className="form-group"
            >
              <label
                htmlFor="lastName"
              >
                <strong>
                  Last name
                </strong>
                <input
                  id="lastName"
                  name="LastName"
                  placeholder="e.g. Galt"
                  type="text"
                />
              </label>
            </div>
          </div>
        </styled.div>
        <div
          className="form-group"
        >
          <label
            htmlFor="location"
          >
            <strong>
              Living in
            </strong>
            <input
              id="location"
              name="location"
              placeholder="e.g. Warsaw, Poland"
              type="text"
            />
          </label>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="introduction"
          >
            <strong>
              Introduction just a few words about me
            </strong>
            <input
              id="introduction"
              name="intro"
              type="text"
            />
          </label>
        </div>
      </div>
    </styled.div>
  </Styled(styled.div)>
  <button
    className="btn btn-primary"
    onClick={[Function]}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`AboutMe - Basic tests AboutMe matches its shallow snapshot 1`] = `
<styled.div
  edited={false}
  style={
    Object {
      "backgroundColor": "#FAFAFA",
    }
  }
>
  <Styled(Styled(Styled(styled.div)))
    edited={false}
  >
    <p>
      <strong>
        About me
      </strong>
    </p>
    <styled.button
      edited={false}
      onClick={[Function]}
    >
      <div>
        Edit 
        <styled.i
          aria-hidden="true"
          className="fa fa-pencil"
        />
      </div>
    </styled.button>
  </Styled(Styled(Styled(styled.div)))>
  <styled.div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div>
      <div>
        <strong>
          Name
        </strong>
         
      </div>
      <p
        id="names"
      >
         
      </p>
      <div>
        <strong>
          Living in
        </strong>
      </div>
      <p
        id="place"
      />
      <div>
        <strong>
          Introduction 
        </strong>
         
        <span>
          Just a few words about me
        </span>
         
      </div>
      <p
        id="introduction"
      />
    </div>
  </styled.div>
  <form
    action=""
    className="userDetailsForm"
    onSubmit={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <Styled(styled.div)>
      <styled.div>
        <div
          className="form-group"
        >
          <label
            htmlFor="firstName"
          >
            <strong>
              First Name
            </strong>
            <input
              id="firstName"
              name="FirstName"
              placeholder="e.g. John"
              type="text"
            />
          </label>
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="lastName"
          >
            <strong>
              Last name
            </strong>
            <input
              id="lastName"
              name="LastName"
              placeholder="e.g. Galt"
              type="text"
            />
          </label>
        </div>
      </styled.div>
      <div
        className="form-group"
      >
        <label
          htmlFor="location"
        >
          <strong>
            Living in
          </strong>
          <input
            id="location"
            name="location"
            placeholder="e.g. Warsaw, Poland"
            type="text"
          />
        </label>
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="introduction"
        >
          <strong>
            Introduction just a few words about me
          </strong>
          <input
            id="introduction"
            name="intro"
            type="text"
          />
        </label>
      </div>
    </Styled(styled.div)>
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </form>
</styled.div>
`;
